Update Title of index.html

--- a/personalpage/media/templates/main/index.html
+++ b/personalpage/media/templates/main/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Personal Page</title>
+    <title>Personal Page Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
